Poistettu turhat koodinpätkät, lisätty responsiivisuutta taulukkoon.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p id="hakuotsikko">Haku</p>
                 <form action="submit">
                     <div class = "hakuwrapper">
-                        <button onclick = "clickIcon()" class = "search-icon material-symbols-outlined" id="dropBtn">search</button>
+                        <span class = "search-icon material-symbols-outlined">search</span>
                         <input class = "hakukentta" type = "search" onfocus = "this.value = ''" placeholder = " Hae kirjoja..." name = "etsi">
                     </div>
                 </form>
